enable intel-device-plugins-operator chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:1rCjkxQi7Cp0LVSQ+g9h6exy/yYpvUEhQ97oVnBxK+apl0GBfsdtjobi1mOkcFFlK9r7DfH9ysLy23IV50464ZQ=,iv:NMZVHJDNSeobsndx/P7cj6ldrm3R4VEk0ip9x1EOmHY=,tag:L/Mw8LY6KkHNPyAceexNTQ==,type:comment]
-#ENC[AES256_GCM,data:p2hSNqUJoeMrAZIw4G6+z20QCLTY+/LiEe+4gNBvkp5iwYs6Pn6g/2NmmiY=,iv:WwYfnylTq51SBhZ/Wyd5aeeOWhrxdkVpACJuUmbMDWA=,tag:R7c2rC5EWiCIXAU1dsrRkw==,type:comment]
-VIP: ENC[AES256_GCM,data:YCOml473PWwpvRB/uw==,iv:XHJJWZLldX1CIFbQXDP6M2J8EucRkafgv2uVDDlgmgs=,tag:7GDbQnmpxQqlP1kKd+kYyA==,type:str]
-#ENC[AES256_GCM,data:tnR8U/VT6mxtxLDD+rELYzMw6vtY4zzCN2R4,iv:otkLSapwgCrknHQppWXPbexkzii9m9o2ssi4ce75tEw=,tag:6PG5zCWlWRxZvPofsRnRng==,type:comment]
-#ENC[AES256_GCM,data:5gvyXpTYD2tXc+05+rWiTyfwKDZmrqi3QY4DLtkuvjLlsr4EgFguTDUanxr/1mWXUwzwTNTji0p81sFzYNrIaSLKD1ESlL0Ucvgxa8QQL7YJq6I3IdIwEaw=,iv:sMwhv91JezLHEnR8nC6xCQfVSm3UsHpyNrUcxK0gqOU=,tag:Arpgr6v5cjYTAwj0zLyCaQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:Ayqf6FuSi1Bogz9fb68=,iv:pm3jP/WsY3bhj43bQttYfcrXX0+0/1fRC1+2KZpg6Lc=,tag:ccEHNFIO7VnWNPJslpzkpg==,type:str]
-#ENC[AES256_GCM,data:AgCpcZlPFTG70zFYHEYxtSlgbiQA4KpSflzFSQoaPDRqGA==,iv:5QXXE0vyaSTNJvIlBZgLBOK4i3GEo4k2J6lBMbva1Rg=,tag:IC/tn9MC5lZ9F4VlL5vZVA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:5DB/hGM/50PB7TGHOQ==,iv:X6o7rXc7nnN7MN9vH0Dx181v2w3C7LPJ86Gvx9CqtRs=,tag:Ga10K6qaMIxZZG0RGSq6iQ==,type:str]
-#ENC[AES256_GCM,data:DY9NOjNuyW/MRwIvYuO6RCv6ajEl9WpZAyw5agB0MNlkB0QYyishZXhSZzwyJoM=,iv:D3r5AvJoPx/+Q1+UTzhzbzLCa54cUCDLgwwvYv4egMU=,tag:Gu1Tpp5CQbK7noiEje7tbg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:cA+lHlFV9LV/0kGfkwUy8qTTLBDh8Yh1garBHLUgoA==,iv:3Ds1bC1HhIClH2h95Y658ErbTdMvaqrGUstDYV1o1Fg=,tag:aG94aDHJYKqbSdx3aJGKwA==,type:str]
-#ENC[AES256_GCM,data:yfaHOT9S/tWe4dJVeBN+ZvG2PLmGesk6AL2k9n2dfVgG3n54WBl+4fAy93J0cyhAprotQhcdEBMB1LgI/1RZOYjcB0p01bso56m/frXeOhUCaw==,iv:wvhzOxgyg5e7plZDoNubgxXjZAmVL1bhMzGl1mcsa/8=,tag:yhWaAX0VkcuPWgfHGt9Olw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:sqJOiMIO6cRXuWLHCxAM,iv:b48r92NUiXbhWXiE7k3VJpLvn8bMOTLTBr54SfHABRs=,tag:DdUHZS9jbgW9x9nR7XFOxg==,type:str]
-#ENC[AES256_GCM,data:gq5rAFTOsuNQ58IoxiBKOvQlYSFFtRQX0rrqKRL+Y3Ii,iv:+FUla9wS7XFVfhSz/za8HNtbelwCs/1rMTuRuMlipNo=,tag:e9fbxL/pdyGhsT+/0yDMbw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:1S+sRAHYhabUw52WxLNH,iv:DMtVHo3/7kwqCHkRkg8hsGnDxLlRmT8iJUgdkeWgXmw=,tag:b/ECyuSD5PERLJH0ZWUBow==,type:str]
-#ENC[AES256_GCM,data:iOtLJmth34BqQZJfSVRQXOxFqBRJeshOwVTJfmEwtObLSS0Uh/7R5kW6YEfisBRS4uKv07bP75coDo2oyoYJW3TEKviwj7Dz992Luix78zE=,iv:RjsENiG+u9o0UlaEwsa4YYqCqd+qttE6YDNmwSzP6zU=,tag:XJUI0bnW/vFmS5jtdhwyVQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:UleOAYa498BDYVc+FE9S,iv:XCn9H9a2TUV47WFssxK/oWPIQJqCUntKIN1mTgVp1us=,tag:0CxTf1eQKK24YJPDnHRLgw==,type:str]
-#ENC[AES256_GCM,data:tZt5AoPcFnxCyC8Mr0G4boIkw7LAWG/WmuVFeR47aTSaBjtPyWx3GFqsdSKiHC7XCAqlFaI0T+D0VhQO8C6zaxjUfrqljUXpQe8hCab+IeeAB3ir9aeS,iv:BGNrFDuoe51fwQNgCP7wXLpVPkT1j5rjZ2E+TZSooYo=,tag:3+kNvDsxfzl3dev5BJihJQ==,type:comment]
-#ENC[AES256_GCM,data:tNKabeeg4gKTp2k20LrbOekHFTV9ISLvmQyLkf8cd2l3sDNAokwdiebi8WocCq3iX4gIJv5CVQVlDxqMnwYJHGzILvZUNFK//SpNOvK1poK/gmdMvTcqjc9RVrDq6JBwda2jtPZ+RcwlPM5YF16Ou+ugW2KEqpb+Sf1Dyg==,iv:dGR4+qHs6iaN+zkKSVuWkWr2W176gCIa+PaNq0BI8pQ=,tag:HVkoFcv9GmWoyfO7gjEDJw==,type:comment]
-#ENC[AES256_GCM,data:NOl2WyB876sCPE2o0hVNev1UynYjp5BWtYB6vJ4Z+HviCoihlnq4Z1TQYRhELDhO4QbalOZ+gmi8PVfXJs+e2EAmXK2j9x+6eLXvlJaJ9u0=,iv:wnhfpj83GWBvmfqtcWI+PxetI1SSD6brQcmXw2L9uxA=,tag:UeBM3hL3fXireFDiEMSb2g==,type:comment]
-#ENC[AES256_GCM,data:tRJxuyOy6P87XXr70Ztldxa6whlfTRGgAeaeObcRtPAp35StTmhJQtyF/9jgZKHiaCJeAat4,iv:HGiMk5pwvosFJxGhyG/ekgrzrBMlnjO6hYNCNy+DX4Y=,tag:C7zUiiCzbEpzqxAF6CNpCw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:Ryt4/XGgoKaqT9c3,iv:39QjIQl9H/UiUi+V6xzQyHbvjnIydfqHoAsi1uwb9qY=,tag:YiFzba2EZakZIxG0QEyLUg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:QKdP/GFcbhuFbgqGpjfSQws=,iv:chS78ZA1AZpK0lIeT1kJixPuxHWn8XJ+jb+aoX7xwgc=,tag:pVT5oMYCu53DXrYxgGCmcw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:zVSgchZ6jf6mNUF6ObCVZuRV0LxzKcxn8icneKLXNNk=,iv:2po8bGZ9f8coCulsJKC/xe2N0oIH1KdmNme7cTcbKtI=,tag:6DsHvkiRNhKm1Ber0bCmBQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:IUapnicyJwpbBt/31PSiyV9CVjvhJ/vyUwV/+0xIAswXLppmp0VDNw==,iv:O9jNSne1K7780WsLm7T5Whk1a3GbjGw5serSHP2/Aa0=,tag:lq2qipgR+HuNuKD3JUUSDA==,type:str]
-#ENC[AES256_GCM,data:RhB7ABK+038hcPToqpWhcpKSy9WjXGn/GW0zpuptxf939wS2uGkI7s7u7bpEKrdSGu1rzYpsydXBhPy5g71zwA==,iv:eRled0fciBKHyqdFOajmOkfSEGzLQQByDG0PfrsrKoE=,tag:cAPgq6MHtPyH0X2kSl3WYg==,type:comment]
-#ENC[AES256_GCM,data:GskIHeJJQxWAUlmtfwbdWT4qBCX8bivekE2SDin/QaoqrSSacn+FeZbL9waYwIt0qohciX//5yg=,iv:93muzepgAXskeZ+/fnt9LmgN740o5MT3v5UPdXJ0GIE=,tag:DnFbc1hfShK939GEgqpqhw==,type:comment]
-#ENC[AES256_GCM,data:m9a2f5EOqPz06HZAGkribHK2uxlBc7mm3g==,iv:3ejgoJlh54Pz7zGZrf9gwMBzcnWGhIKyXylH4EZJBg8=,tag:mTeR8rJtl4OR/z0ObCgg2w==,type:comment]
-#ENC[AES256_GCM,data:Nmi8SvkmyvvIiVt7GcPZe5HOHJxQOMnm3xYfvJp/4h1Vq/eUp9x7jXKRHhdKXK/lJ1xkI5Oa7nXJfVVIdhcqfWgLYpVXhCwMuqCbUbk=,iv:Yasg0bLHDJUdKp9mzETux2UjxQsx9cfE0IKOHkMfY28=,tag:wjQ/EAWsrp/tC3zk+MEQBg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:4+yvsHE2/oRiLBgwvaOuv5DcVDZFpg9qbHMJz/DrOMLhwjjHGAKqTcqyz93yDdLD,iv:KK64r7DCS/LNyqPicKtVpmdvxKw+RVM5DkGjqBKRr2c=,tag:l3Nzo3sMuZpNwOJt8ZjNUw==,type:str]
-#ENC[AES256_GCM,data:1h5FEmaODD/0fEEyeWJRVGuUd4Tp+PFbEb7q6JWXzD918iG3gek/tlmH4t5UUZGXQHuFWFNMAtiGAX629G1oEAqWNduUeNM=,iv:asjgzjKN5AFHos8/hotcR8U7TcaBjQkowjLhUYl97yY=,tag:ItM0aHPdWmuMWtfbfrH1Fw==,type:comment]
-#ENC[AES256_GCM,data:kTJv8xJczNJ9Aua0aqJvgwVa6/8Do7d4toQY04ZZsdYEp150n30sT2iXasmzXd+S1FXf3YD2,iv:+tSvea4GFRZZGsS/YGbGBUJh+55e1e4YXlS6XVgvvv4=,tag:T2u4MiHieVOgMUpa9zNnbw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:/YZrMe0Qug==,iv:4lvcbYMpFZWPBO2D2ZKesUJb12P1Xw0AZ+AefaLFDno=,tag:KVjtu6zw4Wyg/esf/dLpww==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:cyhLVeaVyupPTVe04o9ZhiENeP8=,iv:W7wEwzzFm1za7U5V8MS4f1XVVdNa+Ijf4l5zoT+YEnk=,tag:Fsg7Bkk2hqboD8nn8Jaubw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:7U3t7DTy+oy7f8I=,iv:/GMyKvsr5ioJ1dPtTQoNoxGbmBwcScEYBbM0928zp9I=,tag:S0UXXjhYA9Tg31iX41Zb1A==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:jw6rqsxMqn39Uq0Jg9r6,iv:kCOe558fGs/xYoyzWPmXqMuzCoGBspjnj5R/7yZGD8M=,tag:JivkoeaQolhd7gdgTcdXjg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:5AUrGxOgacV/LHAu5xiBoiWiXd663hXUhA==,iv:WCfl9iXXJb1Zub50XB7uXo1h1FNW8amtEJVXWJO4GnM=,tag:AHCEJY7hRrtI+I5RUB8FyQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:O1IYqW1PIf+p/NDnj1ribZKOl+6V3bbkVs26QPuUsA==,iv:FvTfpYKLhhKk/usq7XoioLvIG6+FQB4reNTYjQLUa7Y=,tag:ZBFCd9NY1lsXesi8YJFIjQ==,type:str]
-#ENC[AES256_GCM,data:99vHoDkrinPFKwaTM7KmVbgzOdDQNawRx6PnLCyxs5YRhuLLv/Q=,iv:9JBmJkLtlPT0VtToVRh9BgL6QiHGsssaCFKNTGBZ5UY=,tag:DmEtSuvZxCxrXZe5vLEY2Q==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:oU+c54riZWk6JFIZlcLU/3sek60=,iv:SX1lR7IqSOyx27w6LzgxwvXEFvbBp/1Ao+p/W8uQXnM=,tag:DMS79y0n85FiPnKxbZwuCQ==,type:str]
-#ENC[AES256_GCM,data:YuHpqtI1MLQMPmzv5tg=,iv:2ofQnt9O5O4zltb/e4JJZJ14cz/80RBiNTPVzJTZqIo=,tag:VzXML6i5omBzmT/a0jeFuQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:B6fRiGyv7zvhXUDGIw==,iv:dNph0L/0wjqobLATIX3oeqrkplWlReUfAVbGV445IKY=,tag:6zStKbAgn8BxIYW2r0S1Nw==,type:str]
-SVCNET: ENC[AES256_GCM,data:ZlWTgTWwoo726EH0kQ==,iv:EtXkbNvYCbO74l4NQqV6Bh0M3uNyPTS5Ln8ai4Fbo2w=,tag:YxVOoAMYEhK7kCO6GhbdVw==,type:str]
+#ENC[AES256_GCM,data:PxK78R+8KUievTpvUec2Xc0wO5dQdOnfwEByTVqJBKwlfzhpAH0ExHzJeVGAu9oqjOf3OtC1KDf1MCj7WJhAGso=,iv:grsztnDF+vktla68nIalTRHH7BHzVWV3+LVOOya5tyI=,tag:6YwsQOq72nrYNb/dVPPBzw==,type:comment]
+#ENC[AES256_GCM,data:XGuTNS9uMHtvfWInHtyf3+kaPs7b0u7EqNrvv8q92hgEadtidXzQmoLAD7E=,iv:C81yZsGP4IFghXW4F834B9F1bRHZ31sZYKy7o8+UFaI=,tag:pPL0V+5PQVtCcGzxHkZjUw==,type:comment]
+VIP: ENC[AES256_GCM,data:KBBWPppRTjAs9Er8SA==,iv:Yq2j7jUkcK/yMXUskjupepu+WRO1zcIgcDCHTabyrec=,tag:DnfPAiJx+Drw1njkWD2kfA==,type:str]
+#ENC[AES256_GCM,data:Xqs3FV9a/oqXIJDR0tsFPw+90qxaOXMpc54D,iv:dmiragQaORBv5MZnVJ6IDT9zzkJFrnbu4Noqzg9fVOs=,tag:fY+m9dwtvVTkunWIA9CaWw==,type:comment]
+#ENC[AES256_GCM,data:KRS8Y2My/hCbPbs1/ESi8kcnty4LTiodyc5NeBgMQdXbwQ4YCQwop+E/iIoCsjAVaizOneHo2mwzAofwVAKN25ISKD/BfwFXeIiMpEd4jXkF1FoIo6CtLss=,iv:IzK6Ef9ayKhsKgLBL50sKyLvdR9QTLl5AMqsru5AVBU=,tag:uXUsBLQ9cPhKVJlUB6gZWQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:mP/+ZA2T8jbi5yYP3oA=,iv:F85zpkQ3eTGubrSUbGzPxgSf0Jbi+OgP66farkH2Xic=,tag:jhx7W09JS/S85n2/nErpug==,type:str]
+#ENC[AES256_GCM,data:fwIHaHtqmZqbRETejyBwdvYaUzzLiCaCO6EnQJ+ehyV92Q==,iv:OFBlYEMA4OedwTTta79x/etGWsje2VZSKtBZFVWktLU=,tag:KVoHRm7zta7tUbMQn5i6aA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:gjLlqw4JiaBjDQ8V8A==,iv:0Rf5nY6i/Z6QhdN9c8XwFTdZP+4hdhDholFxZpZ703A=,tag:aIMzwT6URCtQh43Q/LYyKw==,type:str]
+#ENC[AES256_GCM,data:1Fh348VSvx7P6ocgUPXHZifQHqQe9TAm/72nBFY06uDVFOCBKky3oQA7paIcL30=,iv:8nBTis7069f3Sw+SOvj2fgtNTklFK8zaVTzWxSJbiaI=,tag:W83+VVgA0U8MD19U9NjzQQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:7Yki7/jVk3n0hSwdWufNSkLkKs/oJ4gIXSDvnQQR2Q==,iv:SNKyTzrOFHPuJe95oW35lnNDTR/66Oyk+mxDNWDY+qw=,tag:nIMMl3zWAi5v5eYMKUUs/A==,type:str]
+#ENC[AES256_GCM,data:jfkgNRDicwYCbyLpq7mTM4jIgUAUkttBVCPy/FLu7+SMd1DRP5Xs9Z4KdGXuFsjONvXKC5wjuVIfkaVXN5ZP4kX03lr3W2AWFGKkQHH96lq7bg==,iv:/wjVIZqi6jYL7S7KPrHJ7ne1FercXYP6mN0rhpyQAoU=,tag:LTx6hKl8Kf+ECLqV/izyOA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:QV0rVrSn6lPATl99BLnp,iv:30Trj3QKasiznCMaHW9+GJY292RtfS26EqLEDfHx3NA=,tag:XzuH+uHTiWQnPibefQRgwg==,type:str]
+#ENC[AES256_GCM,data:tOH058opRHaOIJJrjGcJNZxn//MHZx9a121ILEEimwWs,iv:5qwCMcWCSJvuRIQoz1Hu1aigmZ2zKWWHLdIFJ0F5xrk=,tag:VPjGvO8yUakeTGrjy/iOMQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:ldOvFJ3HXrmwkt8Sy1Zk,iv:/ZkyBypJcaB8PGFYIQ8M9BNXMmt1hHrNxfnywZ6v9A0=,tag:oUQUl7hamofEMw+Sw0TKBw==,type:str]
+#ENC[AES256_GCM,data:9RkKrrZtirfnhi/fBtN6U2EWgrNrL7UUodgWV8/h/9zUzCwmEX41nJrCUPVkDFQZEXJ5sODT5UG6dq9vibanHXnS3gCaRcZ5iufuwWLiWRw=,iv:GEpl9xGGKrCXgDa0buE2AuPxQKd/uWZCZhxEr8uKsJM=,tag:fp0vmolcOcgY3w7wBZPKLw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:TrizeDRFmLHyPMfo6L+E,iv:/wbDPe+1FjuamZTuBdtjfBOYK4Kjr8cY9JmvXAdplhI=,tag:xrHardiJ12e8rvPeSvPyOQ==,type:str]
+#ENC[AES256_GCM,data:RySIsxs1fqByLss8p5ImkwI4Y/lO8K0R4tY2EwTzlXib7paUnu0cEomeDUUX71EiiyvuV61bWG3w+qhQa/IaHizAMXTfumjznyFg3gs572ZR9ReaQZ/I,iv:8L/l2czZTq+HP1+1w6Dzh7zpWv9hxVKpNJTGDH8YYow=,tag:NeoEU9SxoUmhAibf425zHw==,type:comment]
+#ENC[AES256_GCM,data:pbQKew0N68DAZQXBojDcLgyYopF7v5ZKmwSERxabkYZeQlF6jNPYH74Nk5qdDM50xs+NdfYiDDGDvQURiVXnm6p+SeGWC8zB+lT/VUdj18nMMKBR4Sy8Kk6B3mLM3XV287OgEvh42y+VZusypAT+2pGz6gMzc3m+MTXnTA==,iv:PR9MGcb9fWb9ordhu5US5gPAOgd1bM9CXB8JU7I9mTQ=,tag:Foe8tGDjzbBxoKmwajGDig==,type:comment]
+#ENC[AES256_GCM,data:fA4WI73JEdAZDhZXPH/7UzV9fct/j0kqYDZxAF4ZtLxsIaKvbxWed72t9XlW00Kstl2nnLoO7PqTn3pQYfBZyCqEVjjp8tFSzPhg8XGzK1U=,iv:9WZYX4QaZHa9b0v0RfNbTdV56z/DQsDmwfT8Wh26vZU=,tag:ojyNJgHRIi38r/XKS30dDg==,type:comment]
+#ENC[AES256_GCM,data:pYT5HCGUSjYAWVPgKQYsaHonEkY7CPVViyOI7u61fX33lM9+sqwRFLcncNS4T3VzJZLE6Zql,iv:0MPpt2jbHTd1blQHp9OpEmOgA/7Cus/+rhOOPgGRLkQ=,tag:xBo691leILM1QmgKluRoYw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:1uT4hsjKxUPBd6Ql,iv:5KIlm1Tc7bWnPHd4kP9ssRL6WwkGArBhCj7puFZf1Jk=,tag:eAwcp2RoZ5SXlyPpmJmqYg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9LrfybogKb4xRk8kEHpeVQI=,iv:VW2z9fbDS2x0PAYFQWUL4YlsJR/SIradL7Ym3p9u7ps=,tag:HTGQ71e/xiThYK+ON5jSGw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:7vZL1C8h96CNgX1hrWfpLbf1w7QF3PKk5L2pZG8wrpw=,iv:fFY3kA28WDlcCsbcYawilyIlt+bDs+zdsXfMptUQwaE=,tag:Ui1U79+OE6MpX+wzyh8m5w==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:QfIW2bmHHp+1K1Mq3h1e5SfaAtAyI6NlnpK2lsz49MdoGCKtOcXuiA==,iv:JTYY1pmXLACkOPWIJ7kRbGRErxG8WjJamZw+dRIOfJo=,tag:mrKkRtxQ6T7tcU0dwutYTQ==,type:str]
+#ENC[AES256_GCM,data:/JFFdAcXJoXdaw9l1FN8ls6aavJ4kSiAJmnetFjJuAOS3a3wrk5eQHea08qjSaYlmjPXwkDRQ+JLqSFjIwmQBQ==,iv:zwrmIO1Qo5AKbv6QJvV6NSsg/ytNIgZRA8ryq5KWzkw=,tag:OUgEBK0LR7OZ9yuOzjIXyg==,type:comment]
+#ENC[AES256_GCM,data:fUhcQ2B480nMa9OOVWSTYV0CMBp/2LT3Gbz6psZdRoE3F2KM5rokJaP6eEk1k+AdBYbtmV0AZH8=,iv:+mvbTI/8HUNXhv2r390/Bw2AT0cYJH5gXeBCLl6eLDY=,tag:SgAVTNlshcpgMbxNPvt1DQ==,type:comment]
+#ENC[AES256_GCM,data:8iZ3cyc211ykbYT0nAZHlvw3m8Z87kQgOw==,iv:5yDlmIf8wFYN8WgG/AV7iMGxmkojnrLSBfsoFn9Ko7A=,tag:JW1g0WNFl6Vl76zIYj4DPg==,type:comment]
+#ENC[AES256_GCM,data:1k1xC10WnW2+pQCpKOotz3itM6N+zVvy2JqtcelpD+cN/asOF599GFI/H/leTeaYiMH6tGdGM4tQeW7bym8+m2W8U0CZ8MxDUXTUw6I=,iv:p5Yp8qtyFtMQeIDz0aYhsHiKU2d4QSXlqXxly9ixIto=,tag:k/kwWiCmqe8yHPMWP9/QSA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:mD5YaNDbMjw3F4LzJ/N4Gx/V2KbM5Hyp1cddG8v0Ixu5DOzAXma4RLBxwOnM/MU2,iv:5OOKGh7tR1Xo2JG37xcApCeZ3x/etX6U7/2uAOoWFVk=,tag:3tjMCbXF5k7pCUuNplhEvg==,type:str]
+#ENC[AES256_GCM,data:k279Hqzd15fcQ9pkFBgWQzLSQ6y8jkWf80XQJdn3J4EZo7Js1TvR30ONKc1r8KsIuyhyKosYsQ2IgKY+e9XumYK7P7gnLGo=,iv:DX2XMmpvMeAOZxJelDzNw/7XmL8SFLmrEwgWCnw2Qe4=,tag:0Mu6QUK7wKHoir2PFrihGA==,type:comment]
+#ENC[AES256_GCM,data:S0nkEpc09MvodVvjGGw6qLoKM3yBprfS1AGDjphKYCtxjlFOPi9oBsijEWrioljbNqa+/o7U,iv:jbb6YHijzbwWS73o+c1vWNwHPOKU8dDhtD2fOCFL4UM=,tag:8QMi52hBFv2sqfPHmzF50g==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:qHfp8DtfdA==,iv:wdncysiAEinbzDcRiMawGQ/EoySOJevh67V1hc9dM0Q=,tag:SnecEfS9jX2Hw+FLu0P55Q==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:fY4ojStURgrd8xzAsyMXVV1z6+U=,iv:Cg9AKjZnCI1VqWgOxwrD15Glsa47c+4JoDhZFgiuAPE=,tag:y+njJRewtVMHDaJ0IgjDHg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:XruGOlYTLd/j3LA=,iv:5UnO63D0Sor2XkgN/pJlcuj67G6WFL7+kUlqsYKp44I=,tag:QTRaD5sPrx2cUEUeENrQqw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:g1cj5CuMgdtCjkI3NosK,iv:uV9iWaUWQq4HQpi0Jy4u06jPIgXgJkq+KcNJ/m/BYVU=,tag:VdzLVSjcKDyvEKE9568QTg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:vEC8sKPkrGhHFA2bT/2x+yjYPVag09w0Rg==,iv:U6C/GgSmGPoUzc6MQqNYTcFTe4WKbJ/iTeU55AIu0/c=,tag:Ashsfi5ETzeh0rMrsszUvg==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:/6VbsHrdsi5BqlxFm2zxfVtbBgOlrhc7/WiZmDp/TA==,iv:KDafu0gVvWgw8vFiLHDmPKJrtNfX5LCdhYhot+U9yKQ=,tag:zHSDpbuuqAYtGxRTXulwUg==,type:str]
+#ENC[AES256_GCM,data:QTPz3Vbnba7GECqD62l+Y/BHgNGkJsAwpgMDyALPdKSbkxmhpfk=,iv:ozlKwBtGOu/F13nOyFG1i2mZT6mFvm7rbkECh7KTu3A=,tag:dfS3L/SN4oNTrgNGih8s7g==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:St0fiF19dx0gqnGvs7itzct930U=,iv:mjtptoAqgugHLYr5jEOkbRzAIzQXPp+O4yvexa+lZ7A=,tag:At2Rod+HMRCeqdQ44jBpjA==,type:str]
+#ENC[AES256_GCM,data:QgjB152y11uy4qdJMag=,iv:4DkyH/zfcTu5Xu+zr15s7oxt70eViB3U87KcX2ZYp2M=,tag:i0xeGyGFZ3fiV/BTJL2ZOg==,type:comment]
+PODNET: ENC[AES256_GCM,data:PTA4V4jINopWYJ0cyA==,iv:6Sa8Poz5XR+nHvzw2OB3JTmvZkGKGQbTsEJV1gNMnrs=,tag:b10q9lFuntAeeLCqvAkcEA==,type:str]
+SVCNET: ENC[AES256_GCM,data:u0TFU7bwiMZ80t6wSg==,iv:EK+JJ+GtX+BilLX9DF/ZARXVsdwcFScW+xTU8pSagBY=,tag:2L97cPrimVb4e5VqucqrOQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVQysxZkdSakJmY0RETGlL
-            dEhoVzgxNHJXQk9GL2duS3JxQWlGelFnckVRCmNsb2tTdU9PMXkyMnZMV1p2WUpU
-            UHVldEQ1YXVwbVlZL2ZCeUQrOS9jbWcKLS0tIHk4NU56WGNUVlk3Z3ZCb1BnQmtl
-            OXFyRFU3N29uWmppVi8xblJSTWo0bXMK653YmKBEN2vWJ9J6v7feiihuhklV5bFu
-            uU/v1hiqIyyLvrYIb4vuyiOe/EvvsU/aBJIxV+Fm2IBg4fykZVsSYQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBieHVpSDNGNitpTFJId1RB
+            d2VHTTNUQmhVNUJ3UjZPYjFFUEpiN3g2eFMwClVpbkVVOGtzQVRKSXNtZDlzaGJs
+            L09JanpEWHRkVENwbit3WlF5Ujg3VmsKLS0tIGtDdHN0aE5wWjUyTWdHUnM5dWlu
+            a2oxbkdHTUUybTlKdEZ3WVE5N21jcGsKX/+nu/OZshs17Bj4yEmz/gBsqW7yNDnI
+            y80KO6m5Xmt4nEKGCHxUvv9ukRJ9XGefu9c6eoF7xiAUzy91iBwSjw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T01:53:25Z"
-    mac: ENC[AES256_GCM,data:llCBDvgWA/1oES8/h69Aan2KBDIoMC+QUIvqlrnZ6k6mA/tDzIgQvbNqAZwxM4IaMdJu/4ySdqtZE/sJGZF6TFtFrXWN0BC47jek+9ES7scFOlIPBPFSZEOVE68alUAc9SzfQYoKo04oos1h6MbXwAIWLCVaioF2zbOejGQIcMw=,iv:QOCy1Nn8s59RUSOovk82yiML0+GwC55IHivHHY6Yz1E=,tag:yMWYTc0pZTchA0WiOJp/Kg==,type:str]
+    lastmodified: "2025-01-19T02:15:53Z"
+    mac: ENC[AES256_GCM,data:U/60UmlxrJqK+lUBXPAO9tVaSac4fjJceTMrnrnZxhRferL7XQ2BqSRoTFozgY5YB01E8ET3OJAKRVJ1tbqWw4PfB1tprwKdvQikPQecLLUDcqiKMDoOsuGNkCNu+HhR/Rqcz+x6de0VE8SVBx9YYqwaDAQluIDHE/ZFfH8PBQQ=,iv:s94EuXgNUEAx957HOscVyrCc8RQny/VfomidLg2ZvlY=,tag:gYptmfP6rT/z0btv6smchw==,type:str]
     pgp: []
     version: 3.9.2
