--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:g3NyM1fq/NCzaaks3lBZW11QlhgTsVwuoxb58WpWq6+Hgy1YTLsVh18Rnu+nc3GEXhiKi9Hi6YcJcRfEXlK70W8=,iv:+vbGv9gnD/ZzKpuBPQIVYCic1YEU1DJr9be5WcpBUaI=,tag:7ZGROZS38kHuCICnAd0i3g==,type:comment]
-    #ENC[AES256_GCM,data:WRyixT2MrrQY3qlsCDruDu6WPfBRKrDva9ohyh4S7ZVH3hKqkamoc3YUfBM=,iv:r1xdL+ra0VvcT2Q/XeMstltz0Rng8yTyH3a99mxRLzw=,tag:gr1+qTz08bcpULCbsuoppA==,type:comment]
-    VIP: ENC[AES256_GCM,data:qxRuqmSIFNGPeTergA==,iv:sxy/dV3sLjg7Y58mQ0n8jLm5jg4VQQ9Cz8+551b5hCY=,tag:xfiglF/Y0YN8XicSvYWjMQ==,type:str]
-    #ENC[AES256_GCM,data:jURjCTcdFXgfHILvukNF9BJp8iPhfcwut6BN,iv:SJNr7+I/sjCaC3DZCheyzyDIz+TMAEFJipe+Qkco1u8=,tag:rNBae6BfNGfl3pA/F0ywug==,type:comment]
-    #ENC[AES256_GCM,data:f/D1YNdn7aokte9Ad+X8S6z9NQtunvg9+lWLfR5qV3hICzj0LJpYusJdXeDAxFrS3MX0tnhheQ0xTPeki7Rd6wGzZFUGGx4dWbXSoiVBLR2hy4vccFZ9DnQ=,iv:6v07hMUAHXicQPdOJL7puF1u3mnBXxfHY9DaEzebG4s=,tag:Hu1i36yNBYfvP8SnucvHCA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:7naPpgNw2MrXHeuEBfw=,iv:QWBELM0F23HoC8mBBEnrPABLA4gLtpE8NSE1kEfb/cA=,tag:CMem6Q70XSRvUwBN7xe3sA==,type:str]
-    #ENC[AES256_GCM,data:p7fVdpOC1ZdZDj6B7W45nkORQ6cR4AKqdHpt8JhlD47cTw==,iv:b9ZWvJMoYEYgOu+AOstNWqUTyAxCSAJiv6+5ZpnDzIU=,tag:RwwH+9L2qXLauHU6LH8ILA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:BHEOb9FugINgSSVNMg==,iv:DzYXpJMN1j/FP3a957PykWSrvo6B2t+jzRYgV6XtT30=,tag:Ts3GtFnqNM4MA+mM/lCbWQ==,type:str]
-    #ENC[AES256_GCM,data:Bu8HbpVZOnvfrzyk32H3Iy5fnCAcFseXoW2ph8G3w3AvgWYVSf08TZiOV+X1dXY=,iv:vl49TXBQIospufEsPPfXbMSzaIQpLWmyYLdzhjUnGiI=,tag:yaIus1Buxp4AJLRQZwmNXQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:EIp+LsTwo6od3GB44qQf9kWITygImXcYlCJAy7M33g==,iv:nurLsN9C5ir5nELOKhMtDnmsuNVuIdyWGK89Sv0cPpU=,tag:hB7Ke81g946kdRVrfIJauQ==,type:str]
-    #ENC[AES256_GCM,data:+R/MFOpP7SYJKpbwd3s91r1/PbvP+ky/7HWmMWUy/Z34QmB5btyLAEtWmk/VuvM+PhmghUG7aMF3lJuRvGJd/fNcQCWYilq+gf32okyddYlKRA==,iv:e6/RJseGG/Ngy4+5fSbFZ+r3IMLbnbZvHGYb+kVQDl4=,tag:v4xyjt2KBVM06rDlUjvYxw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:38RYjIBRNdMQo79tW9db,iv:MdslEaRBb5qEO4MPFc1WItk81+P2qvsqoH2ywEyfiLs=,tag:ezCSF2HNM7A5QkSD0UbULg==,type:str]
-    #ENC[AES256_GCM,data:JJeZfMDiWCmgrbJb5nIwgq6tRp7HJidb6uPxaqH1ybhN,iv:2lmxBJiQVSgeU/TkZHUOEOHP8r2gB5dA7JvNeMDX6E4=,tag:2FE/1NpTwudNe79qGllU2g==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:UrG99eRNJIk9fF8lVUX/,iv:rU9KhoTci/HI9anjLgs9xin0HzHgZfIe4PA13JLOxbQ=,tag:+TaMwFI7wzy2qUyA8/RkfQ==,type:str]
-    #ENC[AES256_GCM,data:QddTkJhUtydC6eqjY9oJTDxOzc3dG1KWDvNdH5KWqczMYPkbR8VpSDoTK78rY+MbCeRARRxIvipVY+E/8+XsKzyV8rSgOQNAK0GZomj8mxU=,iv:4BX3knNCVmeIlhDr/CLmK0fiGzSDoICTipyxb2xRxGw=,tag:WC5vFAW6pPNJcnsIW18iCQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:5AzMuNaCDCqb6WEhPbXB,iv:9vY7zUYpjaF+B8tF703iHi1u/0ORcZd69CnKTnnovV4=,tag:U26lMFTGo5hJ9YFQMFGsZA==,type:str]
-    #ENC[AES256_GCM,data:K+BCM63kpXUnN/5zYwao0kOnt+sJS9npcFOqCzmzDIQ1W6pwOyFReqfzcwu8L80NZ9mN0RuatBjE789ddFih+sSIlDacsNEvrn7SLn2C2gCY92EGMxzE,iv:MkDfzoN3cLmwKza+D0lvgydp1lXa1XBMkl8WdVt4abs=,tag:kujFDnhGv7ZCePRQmNOqRw==,type:comment]
-    #ENC[AES256_GCM,data:SF0eyaC1iqRgDciPpuFaCSsdbp5eXgFtbZeV5mBi3/+PgugPctae/haYbbu4tPqnxncHgll1m55umiiJftKAhLho4K5PmGp5MR6zLYLpYgKV3M8pBmt0DpDM9bGv1enC1MAngJ8MEuJuIJxHVlxOMta5y/IVokcHxyfPaQ==,iv:UBz1jAX1YpF35BLkRiqgYOLNpsU1zGh6d+Guy1uupl8=,tag:RDaPBCy9JWJ/2A2fUrHmbA==,type:comment]
-    #ENC[AES256_GCM,data:FpCllnC3fZ4xBK431f48hfOy90hU339/VEhdc2+Koj/xse+wyDKf4WSYdbi9P1n4pueXYI1pPQB5IYd21LT0vPnp+TvwzoMejWMU6IFYdg0=,iv:hu3O/8jBSkMtPmj4EVoeV0SIArq5Z4PfELQDiEIS+nk=,tag:4qLVdXl+k48NkdtocOYHQw==,type:comment]
-    #ENC[AES256_GCM,data:LCbsxNyzGRvMRrPVg2kOI6Uv9NtN/45RXy7B+MDRi75jku3ThAZtRkermEsJY3hJcM6oqHEV,iv:T0ak/QFIqcLPJLR3iQqp740EWV2gMVJTBRJ03cnakl0=,tag:tPyjP7qjecyfYVRoXHscXQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:bfVYc31J79hEwJvP,iv:eHS/I7u+7ILKoc1DlutExMH0YSz6ZDJ5rwdnh/M86NM=,tag:qK71B6FtNguUsT5hefwFUw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BqlVwA8MdMU2Eq0KPUmTf0Q=,iv:rRplIrWudEmIyHENtVSPSu+EYIen4Ae6vFP2FABWnDE=,tag:Ir7QgPYk9OJZfZ1B0ECIcQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:iTNUNHegtqMPTGkUdqatXw0uuuP49l6hNa6vlqQBR4g=,iv:W4qGfar74k3Vl3hLZ3C3Qc+F4a2xJcgWJ/WRjonnnXE=,tag:J2T0EAjpdAtbVLfZxwCijw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:0Hn8uIQkTymNdN7mNGfW9mmUeWRmq8ryRM6vteHTmBuW1r17Q0+2wQ==,iv:/mWq6KVoirdyRiJpMPS4zTWMYprIPeD7AbtHZxRcVuQ=,tag:2q8xrczv0nypl893vcDt+g==,type:str]
-    #ENC[AES256_GCM,data:Tjmvlz41emd6N/y5uHv5Uk7Tg+w09y873UeKk/x6r6cMD+DuHA/ibVmUEgVOBgPho7hwKSpoKy6nz4i6pPZK+w==,iv:EodwULSjwslWsJJ3YaD2URohKx39FKs1KC9JkcNCLFA=,tag:dWTKlMLXCbxZhFJItUxdiw==,type:comment]
-    #ENC[AES256_GCM,data:jgzs4hcDgtuWqo1LamIjuAV2P2muUSE4uqVscGeJAPaXcoFkvDK4Sz9VjhEv4xAvxFuX3xbotpk=,iv:oTBv5atLixr1qAJaDEW7tfh++5/r9TPN1KDFjrBCujU=,tag:DYWpg0c7Nyn1eQd2w6S9zg==,type:comment]
-    #ENC[AES256_GCM,data:T0KI/abDk9PiLCf4J/00E2je6CfAXaqXOA==,iv:X0I/j2zG9MTcG1ssYYvFcqbjCRh2/1HG34sFcK73Zqo=,tag:bho/MqeftyZITPZfbsiDAQ==,type:comment]
-    #ENC[AES256_GCM,data:1g8w8RPgPLT6epE9r27YwJMHat9iLhsnLu5cHjg+hLzaok/CjnXB+rj2nrt53Sy4iLI/H6MYkcEVtjFJYccj9NFQI/cG1cWZ+Tb+JKg=,iv:aNC8FwQcHXKeTuxGLi9t/t5xnYcvBf3AD42oOJKT0jU=,tag:1nbYnRWRrk2WVtbTrRNT8w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:BcD1+Le8iElsbihGcBIsBUEIBG3bw7Xqxc367BjJ1DS5TLtdEJsxJTgLpW2ZXzTv,iv:qJiW67a7th5coFnn7qrdGnqrLzJdpNgKKE6BlYcqSEw=,tag:2p7ct2LSZ+T1yl7MZYhafg==,type:str]
-    #ENC[AES256_GCM,data:b5Gztnc5QW6UsOvYBBRuG1KGwni2yuktKCFmEqdo23t8Qtx4gtn4/C3E1Au3Y9qlz4GnG7WwrVcXG4rckWk45Nez1sgQTTg=,iv:wqLp25xcGBwHNXUDBIOzdWOb4VOMfciHoJOVHtDKagU=,tag:bq6FgIbQHsF34HtGyqlupQ==,type:comment]
-    #ENC[AES256_GCM,data:uYVlyOy8285Gu8co+o7YzqVu7cGC+J8e6zmoXTEPiuZpXOWkD0TkYxBErhfSn0osvD04EN7m,iv:rplewrDiO0Jt3Qm4GlHvvSWusVpnIBOtXsGzN7C92Tw=,tag:C6Ga4VE7CxY1oJEyadIOFg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:NFc8lGqXVQ==,iv:KQJrCAJC7agtC8jieq0XUQmuyREFOBTHvGAyQVXvTHc=,tag:g1RgMhfOwluMf8PPEybhcg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:b+LK9pl+/vUrXQ/gdzwsQGpRPbc=,iv:gQfLLRkpzR38yae5HXpFC/S3RVkyI6dgLjxrX9rYsT4=,tag:t+KmhNlj2VHuXfbjF12mtQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:xNtDavMs9MOL+Q8=,iv:8nNszQGRHDE+wWtSnIixrUSpNzUL+OqtBEZzppGPGaI=,tag:31yGy3lhC4EvOctvNQcRzA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:WkgVmoxuYwRy8FvVJ07e,iv:tjxE30h6J4dn1hio2OuRczokLaVneTCZXCZJSkfI2Es=,tag:f+MWLfIAdX1nADYPNBs5qg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:YyHvlItIjCR3skq4M1x12uatwML3lUZ8vg==,iv:cc4TcpX+WkAeikrdxwpzJLn2dFnabhlAJns0FbiephY=,tag:UhbLGtDn52Xh3a7kmxYPsA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:LmhuB02A/rqwiuORXoS5RGNCwmDJfqOorpFniBhI1w==,iv:xwMC8N9MLBiFhWatlxgsSnNkH30uMO9513gzPTcYo5I=,tag:VKjgs9Sxq1vClWc5AFmVCg==,type:str]
-    #ENC[AES256_GCM,data:OW2Fzh6zPB4XtpKHkRPHlGNoYk3MzkFD9Bts+IiNykalrwE2VH8=,iv:mDCfwKBKu4TDf/8GLLBHxVDC3gr1sP19wVn3dCjsZQE=,tag:6d6A1ECQLlv4huxPK+sBJQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:4GB7Y2PGa6xS8azKdgVqA+u7h3s=,iv:A+3BOxrqFUzthX9g7jgNqBBFWH+KwYPsVg97zx6U9oo=,tag:CDOZrjHoQu+ODA5KtiQY/w==,type:str]
-    #ENC[AES256_GCM,data:bjp/0YPYbYJpAozLmpM=,iv:ol0Sauox4LgsY8ykRbAL75Egww83fkzXEJiH4biagAA=,tag:0HE7ZMNZidQqon64Eg4F7w==,type:comment]
-    PODNET: ENC[AES256_GCM,data:0rhW1Ag/MVA+E7fGNg==,iv:J+QQG/Qq5yvYF1Iyj1k7loWWYoI6HiaRgm/s7E46+xc=,tag:ACM4Uuxtp8XPI5OXzQpWJQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:cluUPfneIl7MScs70A==,iv:uvYO/bM2yNLnF7FLlL/MxI/hU3Ps2Wt/KYOtN/n6KNA=,tag:2WYU4ZbEnzDRhQPicy2gPA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:qQIRaw==,iv:1ETS0pR1P2YpTMQCG9SGh/t9VMc3jebJU6QNX03wXO8=,tag:bJXE6zwOFgDFdHv2Xw634Q==,type:str]
+    #ENC[AES256_GCM,data:qpnqiCkDvb2GGOlf2zp5Nr4+qH7n0D/+tNRNXW6DdrUc5b1RCleFMPppKrHF7nkybriIzJsdqJPOWIwfs2tvcaM=,iv:+rWV7idek2zz9T9d93J1hqiwY8SIGPTEPfMYpPyqrhE=,tag:2mK2JVaXGEFWSCqdR93G0g==,type:comment]
+    #ENC[AES256_GCM,data:eMPwEBwiSwP7qf5E6FFD8ryz6gRTWMzO9398nTsy3K7a21x6OadcPk3epDU=,iv:GR7mWwdTcwMRT6DpWSGpa/gPPWq06XnWmeI3jyZCafk=,tag:LY2/jqX3ygzsgZsL8CJBoA==,type:comment]
+    VIP: ENC[AES256_GCM,data:GRAYjnoxO8JOUF9prw==,iv:v5jJKAne1brwqpXZB1ni26CBix7WcXCnhXAdU29qhKg=,tag:aMy5QMJuzmE1wvTk4rEwrw==,type:str]
+    #ENC[AES256_GCM,data:7TDNDtRedqgn8LQHArvxdGB7Xk/g33Uw98XF,iv:cgEQ7Lx1dBn2vyg998lsIpv0eKZJ2+VZijn+BywqIbU=,tag:ieEqG5Km2G4YNhJz5vmG8w==,type:comment]
+    #ENC[AES256_GCM,data:aRjsAafiDAp8h51w1tpPmxiIqstmY+HNEc+T24zutURrinirwb6pL36U6jrvrsK8D1oET9YZoVBLw9yg6U2Z+mbolSDvYxIhOVhgcym98LKCed5/5X/ZMno=,iv:pq6b4GbmGF3za5egfjrIk/Fu9R1al9nEQS2rR6jri8Y=,tag:QDMw8SIAjUVjDYlTUqotDw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Vcia2lwrutCRFs1zpX0=,iv:QawuIALzHHXEDs21avlDhnnzpmW6qW4XpYpaxeRIvDI=,tag:txRPhbuuw5Td3qYOjn7gdA==,type:str]
+    #ENC[AES256_GCM,data:tX4gS4SETJyr99Q113Qjna1RxNAHzwRiXWpKBbNrqksqGw==,iv:NAPt4WbBvfH62ecpMu0mCyawFLoMpOzGVc1mQMAKuiM=,tag:JcILEMRDQC/xnZj/CeJd8g==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:dMs/RTN0ZE2CHYHBUQ==,iv:vpLosvFlh7tYdvjocbNt+aitX078t2+fUrD8YHjGogE=,tag:XZ55MCg/ObrSqJWnNoqV4g==,type:str]
+    #ENC[AES256_GCM,data:FLXEGM295YQbvmuQqHYRnAaKY/8m5foSrv1v02XOAPTEzfcegGU5ZEr4t7HMc80=,iv:YNLa4mTHVbS+UI39Itj4T3QYhvdkmxc6p8N2fNjlJqM=,tag:DqTc2/TZ3Vgs1HqVk18C+A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:v3rvl55oKozmo34o/aHfHPdholrBlsge5Ey/HZdKGQ==,iv:cWLtDx0rcOWDwO/yPMbQRO8slUs1Ms0iAHwske6qolw=,tag:QRpe9/bCQoLdILCHbnXCSg==,type:str]
+    #ENC[AES256_GCM,data:vdBwLWvKQSfqHxqUOXQpHsyil3yE3AZ/0AG/hIOYaJbHY9HWXPs9EcHB1Ig0oUw9wYG7BggbsjCt9mN5fd7hYD/BBSUwa/aXRtQTA08VlFiXzA==,iv:xh8NAdd5+R5zs+auTXURf+zFNmtgIvdiO4gIqsZsL1Y=,tag:m8w5ojXNPi5q3W1RD4HHIw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:OeS3S1VhX+RvmyM7pyon,iv:A43tr9N1Rf0kHk2ARUzGnhnjLAcy6w9unYnM7SWQBJY=,tag:hruqtC8f9X6UReOt5SWBKA==,type:str]
+    #ENC[AES256_GCM,data:1IO5VRI2TXZ43vw8M/xndIpT58VQStVRE1HAk9d+w+pd,iv:jCf6x2IVNP7JRWUzH2lrMYOoBnADZSOR3sLqtOyphgM=,tag:+zxL/iZT50PYgVkLp+KwBA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:XbZk+fDPXhuG7jrQHMyn,iv:2dOmQ/4sthRQU4xEG6yNzbwW/k58MXtwBMSiU7p05z4=,tag:+0hJjaO9e5JlA8Alkvq85g==,type:str]
+    #ENC[AES256_GCM,data:PUUliVQWXwuxQDdgLAcHbXrpt5bRgZSLqbpg/iQ+zzCWesBTI85ccyUro6YtK/76r2qEG9Noi2z5RyxH5S3PTRG3kQFWrRN/0PKNj6Wb2ZA=,iv:5iFE6XFJZ/xvCl/32Gbkn+yBock08m+ZJ0Vl8HNTASg=,tag:MG/IocrG7RdOE1l0YMXVaw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:iiEGL7aOTTcZv26OikrL,iv:al/cK0a+pKjTZusGvfSnw7aX+jY8HaWWP52RS8AOJb0=,tag:uZE7AjgQbRxex8tMi/PEiw==,type:str]
+    #ENC[AES256_GCM,data:QcvEMqXML6PyBG5fxjgIEcUNGdx/G/EQKSriaOPysUH8LPUQcAXpJq7s+mIOxfzQ2A+WXspf61OJgyRUVc50LWen+laer7djZ/OC+lprJOTLckYY3uau,iv:9wbGipPOjEekHCockYhnfPPcy0i/16jfi3JeMOG+xR8=,tag:6Y4q7r5cDV8es0Ug+vB9eg==,type:comment]
+    #ENC[AES256_GCM,data:HcKW9nwVFzCqYszF1M2LK/2AOeaNZRCiqMeD91o/daT65NY4FwV/t+EkkRvBeyvUrMlAec2sRXLotpqoeW+r/SLXFtD+LNGJIc398zUaFKTL4U5z0JXXaYuUZ3zhH92ku4B/gD7IvII4IyTsoN2QBIajlLI6YnC5waDNIQ==,iv:KoROR6kFgwfioUwDom4vDgEBZwMrtFU8yxBgy8QyJBk=,tag:mzSZkfD3rTVPFsvpoP4rcQ==,type:comment]
+    #ENC[AES256_GCM,data:ckqaOMx7DxeSfRGYAjRphFqFcVHnUxKXXvPJPhUWDtXC0o03ACnddtjKRZHagi0y0qH/zMaoujFZIN+j1SW7dPn9LCPWKybenQNg2aNkr9Y=,iv:LCTh4cXbPQfSm3gK8oQxN21HSjgOD/09CTcI7/1GmQM=,tag:XQ5FCaYIqg6wI4k3MwoQYg==,type:comment]
+    #ENC[AES256_GCM,data:GzwANasdt/RtsU8lyK2o96jnszqLlhcmI+AVHK5W57rGvViNyGbDCrriBIDyIq1SJu6wvtpM,iv:CU+tHdRgE/lLC5uXJsje1BXkzL6N69j/8kAOqIpQHGI=,tag:6+VU4KyCFI6AhY8B8qU0Ig==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:5sLiJFxBztslRLwA,iv:8/aU/EXB/hexpXn51YB02SXwI81B8R8qAVEC66J80+U=,tag:hbfMJAKWenqLVP/8FUx/wQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XR6ZO8QK1KfKLCl6Tj/dg2A=,iv:29JzlxtqVHGb3+DuQmwUtlcZ/amiC6WSgWrz5Adn2dw=,tag:1hX3OgYAok1QHuZXJB+vgg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:GYl9ERXzZ2/jCvt7NoYPczKkYPBvUjas/e6tSHeeIXc=,iv:athSLuqH6TJprHt7Pod4UJwIXAe4bqdaq13V985AwQE=,tag:lOoeKr4nsQ3/BQu7RwrlMw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:mJ1lHt8HV5g4E3Q/I6kyPg4mdVyhGi9TMKMZcMIsMu7cy+qJgW67UQ==,iv:jsT1wqkRTRnLe7Bagb2LTkSOO/TOTfFxZY1w6QReElw=,tag:sx6yhj78VL3nV1nnHZa9uw==,type:str]
+    #ENC[AES256_GCM,data:N/YpNUmTy6tO/17DtPcIIaZAxvg2EcJ2zrLGJx97rPm1LvJKpfduadUrfrAeO5I3afAXEKilSKJ9CnlZYZ7GvA==,iv:RRy1JQrPNTkBu1kky53bqcvcAVgHWGa3sEH3Qx9l74M=,tag:oTZ5S221RzwmwHft+Wlo/g==,type:comment]
+    #ENC[AES256_GCM,data:qaIE2mld4Ucu26Cqk7zWm66rUBU8Kl+sbcO/0nzx11jH2b8NM2o3EVAlXDbKVgNWF5adMfCVgUQ=,iv:dm1wXorIylOrx1T4DDs18UK+KLR9REcXl8FJ6nAbbvE=,tag:wRLXhLW4NGK5afv5Foxq3g==,type:comment]
+    #ENC[AES256_GCM,data:+X36IHUkDQbL7z5dy7fLcCqHrN7mzPkycA==,iv:P4bBkjFKponhtsCkCpUnlAa3kRr9FjxUr/z9lCWd8kc=,tag:rYdpUMUNL1j/FtgVV7mImA==,type:comment]
+    #ENC[AES256_GCM,data:E8aitSF9m9i9lA7Tt/4IA2oImLkQ7JwZWYA6YAVGq9h5DIoVtmA8+lFxMNA24fAlzPnS1adbxPPCJgewmtV7zADVJjUmeC+nSwTcq98=,iv:ju5deflUj4UDeI3iZSUUIn0D14TidauFIzJcZJGn5+M=,tag:nAqxTQK5uD5rWg6TMWNseA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:DXP191Y5jR35Lq9Oo0O4acBgbB7ekVlm7VVSz0UwazclMU8RwXqjtZLcrdx26BjR,iv:y7wn6WKbkLMmNV3TW/ziCbaxzJhGajH/C3P1HBwDCy8=,tag:0ntH9sXQJ/K2ctuIO8vteg==,type:str]
+    #ENC[AES256_GCM,data:tOjHJf2a8LOX/bX5dQ9lSZFXnaqjqLmDZO72QIorB5788eqqrH9hx7oVKOxBbXX5levUxOk8Vj29nVIuZbh73ZAtEQCZeZU=,iv:Au4j11EhfQg472qrQlM0eRkj+xI3T1Xd36FXJqM6vhQ=,tag:8EEolPh0ZQsOk54x3Gv1Jw==,type:comment]
+    #ENC[AES256_GCM,data:2omgiU1IOkCB2hev7TyScVBecM2hgzpNBFkZPhjD5bEheuZ3Q+IMiRCRmqxsdUFCil4m9yHX,iv:q8mXcrZKwP2vcwkBySqZLrWbHZErOkMB/6SfXPLZsLw=,tag:DjwQNC8Egb/GJecvdTttmg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:qlc1jjDE0g==,iv:gDWvDihcu6HNxLSQgDG0IMaYviGji7RaEJFfdLLIU38=,tag:LYoBhz0b2KvAvU1HEjp3bg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:JKrWHpZ6dIUdqRCVTohTSOs8SsQ=,iv:+ofxQz+G4DLET9ZBeNdfMiE31urO42vbrVnSorThrkM=,tag:UpK31VVh468GWxXvZzN88A==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:EiN7OT24oD6zD9o=,iv:GXW5hBwVHpg0L2ZiGPnWTmSKJ716Nkxl0HSDhmQTT8Q=,tag:Yi7Wn7Vqnaew6dyzyugzJg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:SCBhdMzyh6EPcgCWBzpw,iv:QcE+L6X1Nvjb+HFay7ebS8q2cyhlHo82x1c9oqpSd9c=,tag:qyNJR+7yzS1sDZ1EN7opbQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:uFhfdT62alb9t5EEPZuIJoKopchZGWBPlA==,iv:ukGQpn4k2Qo0nxMJCf3Qdju+c8PP7ISngtRK78XKBSg=,tag:wtUMfApVm4K7RcXldktFAQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Dh9/LOaLhYoO8Ti3iA7aV2wzQwkZbgAWlT2sin4h8Q==,iv:hTV6yTag+b/pbBTwXRG6NB6yEbr16kKlj/IQMN+0i+w=,tag:nw537ymei9lTBzAQq0UFhg==,type:str]
+    #ENC[AES256_GCM,data:DRkVQaqp1Yd/QU6/UqRzbHAyJu2RSu+3Ue1QU/bJGrQj8f9PI6M=,iv:sXm7wmtZPV5Q096v5cXBHEs1O9r1pOkyLoiEY1r1Qb4=,tag:XH7OZUT7w/Uu80mlFl0NDw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Qd2/qSTbGsAfnvmaUn0tYroKcm0=,iv:j3uXV3tVe0be3Sy4BWxlGz3nfurdnRiyjGzDVZQgrmw=,tag:Cw1QDtUSgvlt+GNA8Xax1g==,type:str]
+    #ENC[AES256_GCM,data:P/PYZm380Jvnfy7EdtU=,iv:ewK/uO6DDgVKEQjs6EZOFjniJ7QHkQqZiZm3crVKbmg=,tag:sdT7OFTg/Z8hdKP0sgAz+A==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Ammrd/QeaQwJVErKUg==,iv:JT/iBnMXjfbvhFlxV06N2rWfSvTntojeqG2/SpCwwYk=,tag:7FCjfbSAe3IC8CgdVYOUFg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:I/Dkq32MGGorxqGkuw==,iv:A+lVijNG+pUMtOn83wk9pe/kHIh56pqurIpAjmP0VqM=,tag:ZffIzjJR5rS+eGkYVpiPUw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:evYgxw==,iv:Kt2PQ4TS9crUBguqppJEYYqM3cFAmubrqozQoM/pyS4=,tag:wQwS1lmCeNB8CKJ+VBMxLA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjV3FzcmhLeUJSOGxLSXFX
-            RUFaWnVPd2FGRHhLOWRHc1dXMVgrcUVYODFVCmRveDJjZ09zYWRtTjZKenp6TEk0
-            cmN0RjliSmF3VCt1Mk82dWZuZ3VGN2sKLS0tIFNHZGExekJBU1JCQTkzQytMZXFN
-            OVZMZEt6bnpHVEdXZmMwNlJlMXRydjgK/zFsUcGN4gXydbQTDWZgi1BygLFIxxSP
-            4WAyZ7PSfQeRyCHF2OrtE/H/ErnJe1MJvWqqLWwSg+qCkwqpEDodPA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQajBpMk5tQk1kRFd1MWtD
+            TS9ZRG9JaFlsSVgwbG5QVlJGdjNKVS9ESFQ4ClEybHp4L2tiK3dFN1lNakZmV0Zz
+            dlV5bllIK0lsQkJHSnF3dmttaWJBRDAKLS0tIHZwSEg4SEhicElnem1yd1RQekts
+            eG9MVm83bmlKWlhVSkQyUndqTUQ3VVEKubO7q0yLqtGUFmSz5/mGiCc+r3yzh4MG
+            HEcMQQ8L6OJHJHTzdGWn51vHO9OoNN72WYjqyBr+RauUDvzbiRiWeg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T01:53:25Z"
-    mac: ENC[AES256_GCM,data:2/Irx/fvHuohnCXNmbVY9dpHX8cgJbJy2RdUzLABHR+VJe8A3m69GC0EKgoYW5tqXjIo9GHSRg0j92rqcqZvw6AdpLgk1U4y43kJGvQqgdvaxexUwcsawsMZoPnJVhc99V8TJjkFrjYO+S59eRoL++K1DlfECq1aVXEAkvnw4aM=,iv:QeZla4BUq1eVY0BL8ae24eKjXzAo0WTTqC7WBt9839Q=,tag:YCsfENvJ+MACcb9UTFvh0w==,type:str]
+    lastmodified: "2025-01-19T02:15:53Z"
+    mac: ENC[AES256_GCM,data:pNekQyK6iXsgnxTcf1xT2D4giKE6qrMX7Pj74sw/beiGR0Kb3Oz/1WJ/svC48A6/XceIapIpUrnEeDDpc5OkhZwmnH2t4fEqrTAElxF5NqF8O8Z1WdFWkRfVirVbhlt3L9tSgg9at7tbXFaJAnXnl0Aw2KyZUj6EFo38JL256kA=,iv:ffa2kbrRfIOr9Y88Ytj8v7QB7+qTC6SMrsdPSz/fjBI=,tag:iGciAzhdU/W+H5dGNx1/9Q==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
